fixing problems detailed in the pr comments
background thing is a little wonky and the footer is misaligned

--- a/resources/style.css
+++ b/resources/style.css
@@ -73,44 +73,46 @@ body {
   background: rgb(37,0,83);
   background: linear-gradient(90deg, rgba(37,0,83,1) 0%, rgba(121,9,85,1) 45%, rgba(255,0,155,1) 100%); 
   border-top: 2px solid black;
+  z-index:3;
 }
 
 
 /* drag and drop */
   
 .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 250px);
-  gap: 10%;
+  display:grid;
+  gap:1vw;
+  grid-template-columns: repeat(auto-fit, 8vw);
+  grid-auto-columns: max-content;
+  
 }
-
 .box {
-  border: 2px solid #666;
-  /* background-color: #ddd; */
-  border-radius: 1em;
-  padding: 10px;
-  width:10vw;
-  height:10vw;
-  cursor: move;
-}
+  z-index:2;
+  /* display:inline-block; */
+  width: 8vw;
+  height: 8vw;
+  cursor:move;
+  padding:10px;
+  margin: 1vw;
 
-.box.over {
-  border: 2px dotted #666;
 }
 
 [draggable] {
   user-select: none;
 }
 
-.none {
-  border: none;
-  background-color: rgba(0, 0, 0, 0);
-  padding: 10px;
-  width:10vw;
-  height:10vw;
+.icon {
+  max-width:100%;
+  max-height:100%;
+  z-index:-1;
+  
 }
 
-.icon {
-  width:75%;
-  height:75%;
+.ico {
+  width:100%;
+  height:100%;
+}
+
+.none {
+  width:100%;
 }
